--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/preset-flow": "^7.10.4",
+    "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
+    "babel-plugin-macros": "^2.8.0",
+    "concurrently": "^5.2.0",
     "flow-bin": "^0.129.0",
     "html-minifier": "^4.0.0",
+    "http-server": "^0.12.3",
+    "ms.macro": "^2.0.0",
     "rollup": "^2.21.0",
-    "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-terser": "^6.1.0",
     "typescript": "^3.9.6"
   },
   "scripts": {
-    "dev": "rollup -cw",
+    "dev": "concurrently \"rollup -cw\" \"http-server dist\"",
     "prod": "rollup -c",
     "flow": "flow"
-  },
-  "dependencies": {
-    "kontra": "^6.9.1"
   }
 }
