--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "babel-plugin-macros": "^2.8.0",
-    "concurrently": "^5.2.0",
     "flow-bin": "^0.129.0",
     "html-minifier": "^4.0.0",
-    "http-server": "^0.12.3",
     "ms.macro": "^2.0.0",
     "rollup": "^2.21.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-css-only": "^2.1.0",
+    "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^6.1.0",
     "typescript": "^3.9.6"
   },
   "scripts": {
-    "dev": "concurrently \"rollup -cw\" \"http-server dist\"",
+    "dev": "rollup -cw",
     "prod": "rollup -c",
     "flow": "flow"
   }
