--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/preset-flow": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "babel-plugin-macros": "^2.8.0",
-    "flow-bin": "^0.129.0",
     "html-minifier": "^4.0.0",
     "ms.macro": "^2.0.0",
     "rollup": "^2.21.0",
@@ -25,7 +25,6 @@
   },
   "scripts": {
     "dev": "rollup -cw",
-    "prod": "rollup -c",
-    "flow": "flow"
+    "prod": "rollup -c"
   }
 }
