--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "babel-plugin-macros": "^2.8.0",
     "html-minifier": "^4.0.0",
     "ms.macro": "^2.0.0",
+    "prettier": "^2.0.5",
     "rollup": "^2.21.0",
     "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-css-only": "^2.1.0",
     "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-postcss": "^3.1.3",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^6.1.0",
     "typescript": "^3.9.6"
